--- a/III.MOD_CSS/portfolio.css
+++ b/III.MOD_CSS/portfolio.css
@@ -1,15 +1,20 @@
-.container-fluid{
-	height: 5px;
-	display: inline-flex;
-	align-content: stretch;
-	align-content:flex-start ;
-	align-content: flex-end;
+.contenedor{
+	display:inline-flex;
+	flex-direction: column;
 }
 
-h1, p {
-	width: 80%;
-	margin: 0px;
-	font-size: 50px;
-	font-family: font-family: 'Abril Fatface', cursive;
+#azul{
+	width: auto;
+	height: auto;
 }
 
+h1 {
+	margin:0px;
+	font-size:3em;
+	font-family: 'Rajdhani', sans-serif;
+}
+
+.destacados{
+	font-size:2em;
+	font-family: 'Rajdhani', sans-serif;
+}
